# electronics-shop-project

./: pyproject.toml
homework-6/: main.py
src/: item.py  keyboard.py  phone.py
tests/: test_item.py  test_items.csv  test_keyboard.py  test_phone.py
