[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"
black = "^23.11.0"
click = "^8.1.7"
flake8 = "^6.1.0"
isort = "^5.12.0"
mccabe = "^0.7.0"
mypy = "^1.7.1"
mypy-extensions = "^1.0.0"
pathspec = "^0.11.2"
platformdirs = "^4.1.0"
pycodestyle = "^2.11.1"
pyflakes = "^3.1.0"
typing-extensions = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
